--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -1,14 +1,17 @@
 FROM ubuntu
 
-RUN mkdir -p database
-RUN mkdir -p database/db
-WORKDIR ./database
+# Install Postgres client
+RUN apt-get update && apt-get install -y postgresql-client
 
-RUN apt update
-RUN apt install -y postgresql-client
+# Create directories
+RUN mkdir -p /database/db
 
+# Set working directory
+WORKDIR /database
 
-COPY ./db/* ./database/db/
-COPY --chmod=755 ./migration.sh ./database/migration.sh
+# Copy migration scripts and SQL files
+COPY db ./db
+COPY --chmod=755 ./migration.sh ./migration.sh
 
-ENTRYPOINT ["./database/migration.sh"]
+# Set entrypoint
+ENTRYPOINT ["./migration.sh"]
