--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5434/noteapp
+spring.datasource.url=jdbc:postgresql://database:5432/noteapp
 spring.datasource.username=user
 spring.datasource.password=genLife
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
-
